--- a/buf.yaml
+++ b/buf.yaml
@@ -1,4 +1,7 @@
 version: v2
+deps:
+  - buf.build/protocolbuffers/wellknowntypes
+  - buf.build/bufbuild/protovalidate
 lint:
   use:
     - DEFAULT
