Initial protobuf converter logic

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,7 +43,7 @@ linters:
     - nilnil
     - noctx
     - nolintlint
-    - prealloc
+    # - prealloc
     - predeclared
     - promlinter
     - reassign
