--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -26,17 +26,20 @@ jobs:
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.21', '1.22' ]
     timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Go
+      - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
+          go-version: ${{ matrix.go-version }}
           cache: true
           check-latest: true
           cache-dependency-path: "go.sum"
-          go-version-file: "go.mod"
       - name: Lint
         run: make audit
       - name: Build
